--- a/style.css
+++ b/style.css
@@ -5,8 +5,15 @@
     box-sizing: border-box;
 }
 
+:root {
+    --background: rgb(40, 31, 43);
+    --base: rgb(30, 24, 32);
+    --textColor: rgb(223, 223, 223);
+}
+
 body {
-    background-color: rgb(40, 31, 43);
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+    background-color: var(--background);
     height: 100vh;
 }
 
@@ -16,20 +23,34 @@ body {
     font-weight: 500;
     color: white;
     font-size: 3rem;
-    height: 8rem;
+    /* height: 10rem; */
     display: flex;
+    padding: 3rem 0;
+    flex-direction: column;
     justify-content: center;
+    background-color: var(--base);
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.11) 0px 50px 100px -20px, rgba(0, 0, 0, 0.144) 0px 30px 60px -30px, rgba(0, 0, 0, 0.171) 0px -2px 6px 0px inset;
 }
 
+@media screen and (max-width: 600px) {
+    .header-container {
+        font-size: 2rem; /* Reduce the font size for smaller screens */
+    }
+}
+
+
 strong {
-    color:rgba(53, 202, 33, 0.753);
+    color:rgba(255, 46, 227, 0.753);
 }
 
 .middle-container {
-    background-color: rgb(30, 24, 32);
+    height: 7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     color: rgb(223, 223, 223);
     text-align: center;
 }
@@ -37,14 +58,24 @@ strong {
 .rock-container, 
 .paper-container,
 .scissors-container {
-    border: 3px solid rgba(0, 0, 0, 0.027);
+    border: 10px solid rgba(0, 0, 0, 0.329);
+    cursor: pointer;
+    transition: transform .2s;
+    box-shadow: rgba(0, 0, 0, 0.363) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .rock-container img,
 .paper-container img,
 .scissors-container img{
+    box-sizing: border-box;
     height: 100%;
     width: 100%;
+}
+
+.rock-container:hover,
+.paper-container:hover,
+.scissors-container:hover {
+    transform: scale(1.2);
 }
 
 .choices-container {
@@ -62,14 +93,14 @@ strong {
     flex-direction: column;
     height: 10rem;
     width: 10rem;
-    background-color: rgba(0, 0, 0, 0.26);
+    background-color: var(--base);
 }
 
 .lower-container {
     font-size: 1.2rem;
     margin-top: 1rem;
     padding: 10px;
-    color:rgb(223, 223, 223);
+    color:var(--textColor);
     text-align: center;
 }
 
@@ -80,4 +111,35 @@ strong {
 
 .choose {
     font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.wins {
+    color: rgba(111, 218, 111, 0.788);
+}
+
+.bottom-container {
+    margin: 0 auto;
+    width: 50rem;
+    height: 10rem;
+    margin-top: 5rem;
+    text-align: center;
+    flex-direction: column;
+    color: white;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.144);
+    font-size:  1.7rem;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.score {
+    text-decoration: 2px underline;
+}
+
+.players-container {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 25rem;
 }
